--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,175 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background-color: black;
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 0;
+}
+
+
+
+.event {
   text-align: center;
+  font-size: 1.2em;
+  font-weight: 200;
+  text-transform: uppercase;
+  background-color: rgb(253, 252, 251);
+  color: black;
+  padding: 0.5em;
+  width: 6em;
+  margin: auto;
+  margin-top: 2em;
+  margin-bottom: 4em;
+}
+.event-container {
+  display: grid;
+  grid-template-columns: 1fr 1.5fr 1fr;
+  border-bottom: 1px solid #fff;
+  margin: 0 8em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.event-date {
+  font-size: 2.5em;
+  padding: 1.5em 4em 2em 1em;
+  text-align: center;
+  margin-top: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.title-description {
+  padding: 1.8em 2em 0 0;
+}
+.event-title {
+  text-transform: capitalize;
+  font-weight: 600;
+  font-size: 1.5em;
+  padding-bottom: 0.3em;
+  border-bottom: 1px solid #fff;
+}
+.event-description {
+  margin-top: 0.9em;
+  font-size: 0.9em;
+  line-height: 1.5;
+  letter-spacing: 2;
+}
+.event-details {
+  font-size: 0.8em;
+  color: #d1b01c;
+  margin-top: 2em;
+}
+
+.event-time {
+  font-weight: 600;
+  font-size: 1.5em;
+  border-bottom: 1px solid #fff;
+  padding: 1em 0 0.3em 1em;
+  margin: 0.4em 0 0 2em;
+  text-align: right;
+  
+}
+
+.event-location {
+  text-align: right;
+  font-size: 0.9em;
+  padding: 0.5em;
+}
+
+/* mediun screeen size devices*/
+@media only screen and (max-width: 900px) {
+  .event {
+    text-align: center;
+    font-size: 1.1em;
+    font-weight: 200;
+    text-transform: uppercase;
+    background-color: rgb(253, 252, 251);
+    color: black;
+    padding: 0.2em;
+    width: 5em;
+    margin: auto;
+    margin-top: 2em;
+    margin-bottom: 4em;
+  }
+  .event-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    border-bottom: 1px solid #fff;
+    margin: 0 6em;
+  }
+  .event-date {
+    font-size: 2em;
+    padding: 1.5em 1.5em 1.5em 1.5em;
+    text-align: center;
+    margin-top: 0;
+  }
+  .title-description {
+    padding: 1.3em 1.5em 1em 0;
+  }
+  .event-title {
+    text-transform: capitalize;
+    font-weight: 500;
+    font-size: 1.2em;
+    padding-bottom: 0.3em;
+    border-bottom: 1px solid #fff;
+  }
+  .event-time {
+    font-weight: 600;
+    font-size: 1em;
+    border-bottom: 1px solid #fff;
+    padding: 1em 0 0.3em 1em;
+    margin: 0.4em 0 0 2em;
+    text-align: right;
+  }
+  .event-location {
+    text-align: right;
+    line-height: 2;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/*small screen size devices*/
+@media only screen and (max-width: 734px) {
+  .event {
+    font-size: 1em;
+    font-weight: 600;
+    padding: 0.3em;
+    width: 5em;
+    margin: auto;
   }
-  to {
-    transform: rotate(360deg);
+  .event-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 5em;
+    margin: 0 4em;
+  }
+  .event-date {
+    font-size: 1.2em;
+    padding: 0.5em 0.5em 0 0;
+    text-align: left;
+    margin-top: 3em;
+  }
+  .title-description {
+    padding: 0.5em 1.5em 1em 0;
+  }
+  .event-title {
+    font-weight: 500;
+    font-size: 1.1em;
+    padding-bottom: 0.7em;
+    border-bottom: 1px solid #fff;
+  }
+  .event-description {
+    display: none;
+  }
+  .event-time {
+    width: 100px;
+    padding: 1em 0 0.8em 0;
+    margin: 0em 0 0.5em 0;
+    text-align: left;
+  }
+  .event-location {
+    text-align: left;
+    padding: 0 0 1em 0;
   }
 }
